[package]
name = "corncob"
version = "0.1.0"
edition = "2024"

[target.'cfg(not(target_arch = "nvptx64"))'.dependencies]
cudarc = { version = "0.12.2", default-features = false, features = ["cuda-12060", "driver"] }

[profile.dev]
panic="abort"

[profile.release]
panic="abort"

[dependencies]
gpu_macro = { path = "./gpu_macro" }
num-traits = { version = "0.2.19", default-features = false }

[target.'cfg(not(target_arch = "nvptx64"))'.build-dependencies]
tempfile = "3.14.0"