[package]
name = "corncob"
version = "0.1.0"
edition = "2024"

[target.'cfg(not(target_arch = "nvptx64"))'.dependencies]
gpu_native = { version = "0.1.0", path = "gpu_native" }

[profile.dev]
panic="abort"

[profile.release]
panic="abort"

[dependencies]
gpu_macro = { path = "./gpu_macro" }
kernels = { version = "0.1.0", path = "kernels" }
num-traits = { version = "0.2.19", default-features = false }
